--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip install faker
+        pip install request
+        pip install vn_fullname_generator
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
